- added: `schema.props()` returns `{Object}` meta info about all defined properties
- added: `SchemaOptions`, `OperationOptions` and `TaskOptions` supports `$.req` and `$.res` properties
- added: new config subtype called `random`, example: `secret_key    (random)  : 10` and `10` means a length of value
- added: `AUDIT(name, $, [type], message)` a method for audit logs

- updated: `$.invalid()` without arguments can return a function `function(err)`
- updated: Mail `unsubscribe` appends new header which enables `unsubscribe` in e.g. iOS
- updated: `F.modify`, handler contains a new argument `controller`
- updated: `headers` argument in `controller.proxy` supports `flags: []` for REQEUST method
- updated: `.filefs()` and `.filenosql()` supports `download` with `true` or with `(name, type) => 'new_name'` (`filename` will be read from NoSQL binary file)
- updated: `$.done(arg)` argument `@arg` can be `boolean` (response will be as a value) or object/primitive value (`arg` will be as a value)
- updated: `String.arg(obj, [encode], [def])` added `encode` (`true` or `json`) and `def` arguments
- updated: `AUTH(req, res, flags, next)` and `next` function can handle `callback(err, user)`
- updated: `REQUEST()` supports `keepalive` flag
- updated: `bundles` mechanism supports merging files `--filename` between `bundles` files
- updated: `default_image_converter` supports `magick` for new version of ImageMagick
- updated: `String.hash(true)` returns unsigned int

- fixed: schemas validation
- fixed: error handling in dynamic schemas
- fixed: CSS variables
- fixed: CSS variables with additional `!important` clause
- fixed: `controller.proxy()` with Gzip/Deflate compression
- fixed: HTTP status code with `204` in `REQUEST()`
- fixed: `cookies` in `WEBSOCKETCLIENT`
- fixed: `REQUEST()` with `json` flag and with `null` and `''` value
- fixed: rendering components in `layout`
- fixed: resources, there was a bug with reading of value from `default.resource`